added example entity Permission

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -3,3 +3,8 @@ db.url=jdbc:postgresql://localhost:5432/postgres
 db.username=postgres
 db.password=postgres
 spring.jpa.open-in-view=false
+spring.data.rest.basePath=/api
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
